Added task to install Pester if needed in the integration test

--- a/test/integration/targets/win_pester/tasks/main.yml
+++ b/test/integration/targets/win_pester/tasks/main.yml
@@ -1,4 +1,9 @@
 ---
+- name: Add Pester module
+  win_psmodule:
+    name: PowershellModule
+    state: present
+
 - name: Copy test file(s)
   win_copy:
     src: "{{ item }}"
