Corrected error in win_psmodule task

--- a/test/integration/targets/win_pester/tasks/main.yml
+++ b/test/integration/targets/win_pester/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Add Pester module
   win_psmodule:
-    name: PowershellModule
+    name: Pester
     state: present
 
 - name: Copy test file(s)
