support adfs auth through adal

--- a/test/integration/cloud-config-azure.yml.template
+++ b/test/integration/cloud-config-azure.yml.template
@@ -26,6 +26,12 @@ AZURE_AD_USER:
 AZURE_PASSWORD:
 AZURE_SUBSCRIPTION_ID:
 
+# Active Directory Fedaration Services
+AZURE_AD_USER:
+AZURE_PASSWORD:
+AZURE_CLIENT_ID:
+AZURE_AUTHORITY:
+
 # Resource Groups
 RESOURCE_GROUP:
 RESOURCE_GROUP_SECONDARY:
