--- a/test/integration/targets/tower_project/tasks/main.yml
+++ b/test/integration/targets/tower_project/tasks/main.yml
@@ -1,8 +1,15 @@
+- name: Create an SCM Credential
+  tower_credential:
+    name: SCM Credential for Project
+    organization: Default
+    kind: scm
+
 - name: Create a Project
   tower_project:
     name: my-project
     organization: Default
     state: present
+    scm_credential: SCM Credential for Project
   register: result
 
 - assert:
