--- a/changelogs/fragments/onyx-tmpfile.yaml
+++ b/changelogs/fragments/onyx-tmpfile.yaml
@@ -1,3 +1,2 @@
----
 bugfixes:
-- Fix onyx_linkagg module writing debugging information to a tempfile on the remote machine: https://github.com/ansible/ansible/pull/37308
+- Fix onyx_linkagg module writing debugging information to a tempfile on the remote machine (https://github.com/ansible/ansible/pull/37308)
