Added dagwieers recommendations

--- a/test/integration/targets/win_pester/tasks/main.yml
+++ b/test/integration/targets/win_pester/tasks/main.yml
@@ -3,16 +3,10 @@
   setup:
 
 - name: Add Pester module
-  win_psmodule:
+  action:
+    module_name: "{{ 'win_psmodule' if ansible_powershell_version >= 5 else 'win_chocolatey' }}"
     name: Pester
     state: present
-  when: ansible_powershell_version >= 5
-
-- name: Add Pester module with Chocolatey
-  win_chocolatey:
-    name: Pester
-    state: present
-  when: ansible_powershell_version < 5
 
 - name: Copy test file(s)
   win_copy:
@@ -22,94 +16,94 @@
 
 - name: Run Pester test(s) specifying a fake test file
   win_pester:
-    src: "{{ fake_remote_test_file }}"
-  register: pester_result
+    path: "{{ fake_remote_test_file }}"
+  register: result
   ignore_errors: yes
 
-- name: Assert pester_result
+- name: Assert result
   assert:
     that: 
-      - pester_result.failed == true
+      - result.failed == true
 
 - name: Run Pester test(s) specifying a fake folder
   win_pester:
-    src: "{{ fake_remote_folder }}"
-  register: pester_result
+    path: "{{ fake_remote_folder }}"
+  register: result
   ignore_errors: yes
 
-- name: Assert pester_result
+- name: Assert result
   assert:
     that: 
-      - pester_result.failed == true
+      - result.failed == true
 
 - name: Run Pester test(s) specifying a test file and a higher pester version
   win_pester:
-    src: "{{ remote_test_folder[0] }}{{ remote_test_files[0] }}"
+    path: "{{ remote_test_folder[0] }}{{ remote_test_files[0] }}"
     version: 6.0.0
-  register: pester_result
+  register: result
   ignore_errors: yes
 
-- name: Assert pester_result
+- name: Assert result
   assert:
     that: 
-      - pester_result.failed == true
+      - result.failed == true
 
 - name: Run Pester test(s) specifying a test file
   win_pester:
-    src: "{{ remote_test_folder[0] }}{{ remote_test_files[0] }}"
-  register: pester_result
+    path: "{{ remote_test_folder[0] }}{{ remote_test_files[0] }}"
+  register: result
 
-- name: Assert pester_result
+- name: Assert result
   assert:
     that: 
-      - pester_result.failed == false
-      - pester_result.pester_result.TotalCount == 1
+      - result.failed == false
+      - result.output.TotalCount == 1
 
 - name: Run Pester test(s) specifying a test file and with a minimum mandatory Pester version
   win_pester:
-    src: "{{ remote_test_folder[0] }}{{ remote_test_files[0] }}"
+    path: "{{ remote_test_folder[0] }}{{ remote_test_files[0] }}"
     version: '3.0.0'
-  register: pester_result
+  register: result
 
-- name: Assert pester_result
+- name: Assert result
   assert:
     that: 
-      - pester_result.failed == false
-      - pester_result.pester_result.TotalCount == 1
+      - result.failed == false
+      - result.output.TotalCount == 1
 
 - name: Run Pester test(s) located in a folder. Folder path end with '\'
   win_pester:
-    src: "{{ remote_test_folder[0] }}"
-  register: pester_result
+    path: "{{ remote_test_folder[0] }}"
+  register: result
 
-- name: Assert pester_result 
+- name: Assert result 
   assert:
     that: 
-      - pester_result.failed == false
-      - pester_result.pester_result.TotalCount == 2
+      - result.failed == false
+      - result.output.TotalCount == 2
 
 - name: Run Pester test(s) located in a folder. Folder path does not end with '\' 
   win_pester:
-    src: "{{ remote_test_folder[1] }}"
-  register: pester_result
+    path: "{{ remote_test_folder[1] }}"
+  register: result
 
-- name: Assert pester_result 
+- name: Assert result 
   assert:
     that: 
-      - pester_result.failed == false
-      - pester_result.pester_result.TotalCount == 2
+      - result.failed == false
+      - result.output.TotalCount == 2
 
 - name: Run Pester test(s) located in a folder and with a minimum mandatory Pester version
   win_pester:
-    src: "{{ remote_test_folder[0] }}"
+    path: "{{ remote_test_folder[0] }}"
     version: '3.0.0'
-  register: pester_result
+  register: result
 
-- name: Assert pester_result 
+- name: Assert result 
   assert:
     that: 
-      - pester_result.failed == false
-      - pester_result.pester_result.TotalCount == 2
+      - result.failed == false
+      - result.output.TotalCount == 2
 
 - name: Delete test folder
   win_file:
