--- a/test/integration/targets/tower_role/tasks/main.yml
+++ b/test/integration/targets/tower_role/tasks/main.yml
@@ -3,7 +3,7 @@
     first_name: Joe
     last_name: User
     username: joe
-    password: secret
+    password: "{{ 65535 | random | to_uuid }}"
     email: joe@example.org
     state: present
   register: result
