--- a/test/integration/targets/tower_user/tasks/main.yml
+++ b/test/integration/targets/tower_user/tasks/main.yml
@@ -3,7 +3,7 @@
     first_name: Joe
     last_name: User
     username: joe
-    password: secret
+    password: "{{ 65535 | random | to_uuid }}"
     email: joe@example.org
     state: present
   register: result
@@ -28,7 +28,7 @@
     first_name: Joe
     last_name: Auditor
     username: joe
-    password: secret
+    password: "{{ 65535 | random | to_uuid }}"
     email: joe@example.org
     state: present
     auditor: true
@@ -54,7 +54,7 @@
     first_name: Joe
     last_name: Super
     username: joe
-    password: secret
+    password: "{{ 65535 | random | to_uuid }}"
     email: joe@example.org
     state: present
     superuser: true
