--- a/test/integration/targets/tower_project/tasks/main.yml
+++ b/test/integration/targets/tower_project/tasks/main.yml
@@ -1,4 +1,4 @@
-- name: Create an SCM Credential
+- name: Create a SCM Credential
   tower_credential:
     name: SCM Credential for Project
     organization: Default
@@ -9,12 +9,34 @@
     name: my-project
     organization: Default
     state: present
+  register: result
+
+- assert:
+    that:
+      - "result is changed"
+
+- name: Modify a Project (to set the SCM Credential)
+  tower_project:
+    name: my-project
+    organization: Default
+    state: present
     scm_credential: SCM Credential for Project
   register: result
 
 - assert:
     that:
       - "result is changed"
+
+- name: Modify again a Project
+  tower_project:
+    name: my-project
+    organization: Default
+    state: present
+  register: result
+
+- assert:
+    that:
+      - "result is not changed"
 
 - name: Delete a Project
   tower_project:
