changed ip configurations to list

--- a/test/integration/targets/azure_rm_networkinterface/tasks/main.yml
+++ b/test/integration/targets/azure_rm_networkinterface/tasks/main.yml
@@ -142,7 +142,7 @@
       virtual_network: "{{ vn.state.id }}"
       subnet: testnic001
       ip_configurations:
-          name: ipconfig1
+        - name: ipconfig1
           primary: True
   register: output
 
