--- a/test/integration/targets/apt/tasks/main.yml
+++ b/test/integration/targets/apt/tasks/main.yml
@@ -18,6 +18,9 @@
  - include: 'apt.yml'
    when: ansible_distribution in ('Ubuntu', 'Debian')
 
+ - include: 'repo.yml'
+   when: ansible_distribution in ('Ubuntu', 'Debian')
+
  - include: 'apt-multiarch.yml'
    when: ansible_distribution in ('Ubuntu', 'Debian') and ansible_userspace_architecture != apt_foreign_arch
 
