--- a/test/integration/targets/azure_rm_deployment/tasks/main.yml
+++ b/test/integration/targets/azure_rm_deployment/tasks/main.yml
@@ -9,21 +9,10 @@
     template_link: 'https://raw.githubusercontent.com/Azure/azure-quickstart-templates/master/101-vm-simple-linux/azuredeploy.json'
     deployment_name: "{{ dns_label }}"
     parameters:
-      adminUsername:
-        value: chouseknecht
-      adminPassword:
-        value: password123!
-      dnsLabelPrefix:
-        value: "{{ dns_label }}"
-      ubuntuOSVersion:
-        value: "16.04.0-LTS"
+      storageAccountType:
+        value: Standard_LRS
   register: output
 
-- name: Add new instance to host group
-  add_host:
-    hostname: "{{ item.vm_name }}"
-    ansible_host: "{{ item['ips'][0].public_ip }}"
-    ansible_user: chouseknecht
-    ansible_ssh_pass: password123!
-    groupname: azure_vms
-  with_items: "{{ output.deployment.instances }}"
+- name: Dump debug information
+  debug:
+    var: output
