--- a/test/integration/targets/azure_rm_functionapp/tasks/main.yml
+++ b/test/integration/targets/azure_rm_functionapp/tasks/main.yml
@@ -1,14 +1,14 @@
 - name: create storage account for function apps
   azure_rm_storageaccount:
     resource_group: '{{ resource_group }}'
-    name: sa{{ resource_prefix }}
+    name: sa{{ resource_prefix | replace("-","x") }}
     account_type: Standard_LRS
 
 - name: create basic function app
   azure_rm_functionapp:
     resource_group: '{{ resource_group }}'
-    name: af{{ resource_prefix }}
-    storage_account: sa{{ resource_prefix }}
+    name: af{{ resource_prefix | replace("-","x") }}
+    storage_account: sa{{ resource_prefix | replace("-","x") }}
   register: output
 
 - name: assert the function was created
@@ -18,19 +18,19 @@
 - name: list facts for function
   azure_rm_functionapp_facts:
     resource_group: '{{ resource_group }}'
-    name: af{{ resource_prefix }}
+    name: af{{ resource_prefix | replace("-","x") }}
   register: results
 
 - name: assert the facts were retrieved
   assert:
     that:
     - results.ansible_facts.azure_functionapps|length == 1
-    - results.ansible_facts.azure_functionapps[0].name == 'af{{ resource_prefix }}'
+    - results.ansible_facts.azure_functionapps[0].name == 'af{{ resource_prefix | replace("-","x") }}'
 
 - name: delete basic function app
   azure_rm_functionapp:
     resource_group: '{{ resource_group }}'
-    name: af{{ resource_prefix }}
+    name: af{{ resource_prefix | replace("-","x") }}
     state: absent
   register: output
 
@@ -41,8 +41,8 @@
 - name: create a function with app settings
   azure_rm_functionapp:
     resource_group: '{{ resource_group }}'
-    name: af{{ resource_prefix }}
-    storage_account: sa{{ resource_prefix }}
+    name: af{{ resource_prefix | replace("-","x") }}
+    storage_account: sa{{ resource_prefix | replace("-","x") }}
     app_settings:
       hello: world
       things: more stuff
@@ -55,8 +55,8 @@
 - name: change app settings
   azure_rm_functionapp:
     resource_group: '{{ resource_group }}'
-    name: af{{ resource_prefix }}
-    storage_account: sa{{ resource_prefix }}
+    name: af{{ resource_prefix | replace("-","x") }}
+    storage_account: sa{{ resource_prefix | replace("-","x") }}
     app_settings:
       hello: world
       things: more stuff
@@ -70,7 +70,7 @@
 - name: delete the function app
   azure_rm_functionapp:
     resource_group: '{{ resource_group }}'
-    name: af{{ resource_prefix }}
+    name: af{{ resource_prefix | replace("-","x") }}
     state: absent
   register: output
 
@@ -81,5 +81,5 @@
 - name: delete storage account
   azure_rm_storageaccount:
     resource_group: '{{ resource_group }}'
-    name: sa{{ resource_prefix }}
+    name: sa{{ resource_prefix | replace("-","x") }}
     state: absent
